--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.
-		<a href="dragonight01.github.io/cardimages">test</a></p>
+		<p>I'm hosted with GitHub ages.</p>
+		<a href="dragonight01.github.io/cardimages">test</a>
 	</body>
 </html>
