Fixed cardimages link in index, added text for all image links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<body>
 		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub ages.</p>
-		<a href="dragonight01.github.io/cardimages">test</a>
+		<a href="cardimages.html">test</a>
 	</body>
 </html>
