Testing alternate image links

--- a/cardimages.html
+++ b/cardimages.html
@@ -3,7 +3,7 @@
 	<body>
 		<h1>Card Images</h1>
 		<p>I'm hi.</p>
-		<a href="https://raw.githubusercontent.com/dragonight01/dragonight01.github.io/master/cardimages/S101.jpg">image1</a>
+		<a href="cardimages/S101.jpg">image1</a>
 		<a href="https://raw.githubusercontent.com/dragonight01/dragonight01.github.io/master/cardimages/S102.jpg">image2</a>
 		<a href="https://raw.githubusercontent.com/dragonight01/dragonight01.github.io/master/cardimages/S103.jpg">image3</a>
 		<a href="https://raw.githubusercontent.com/dragonight01/dragonight01.github.io/master/cardimages/S104.jpg">image4</a>
